--- a/app/src/main/res/layout/activity_ej4.xml
+++ b/app/src/main/res/layout/activity_ej4.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        android:paddingTop="32dp"
         android:background="@color/color_green"
         android:gravity="center"
         android:elevation="4dp">
@@ -88,4 +91,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
