--- a/app/src/main/res/layout/activity_ej5.xml
+++ b/app/src/main/res/layout/activity_ej5.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="12dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        android:paddingTop="32dp"
         android:background="@color/color_blue"
         android:gravity="center"
         android:elevation="4dp">
